# FullyMobileVR

./: .clang-tidy  .cmake-format.py  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  CompilerFlags.cmake  FORK_CHANGES.md  README.md  build.gradle  flake.nix  settings.gradle  vcpkg.json
.gitlab-ci/: README.md  config.yml  (+5 more)
src/xrt/auxiliary/bindings/: CMakeLists.txt  b_generated_bindings_helpers.c.template  b_generated_bindings_helpers.h  bindings.json  bindings.json.license  bindings.py  bindings.schema.json
src/xrt/auxiliary/vk/: CMakeLists.txt  vk_bundle_init.c  vk_cmd.c  vk_cmd.h  vk_cmd_pool.c  vk_cmd_pool.h  vk_compositor_flags.c  vk_enumerate.c  vk_extensions_helpers.c  vk_extensions_helpers.h  vk_function_loaders.c  vk_generate_inc_files.py  vk_helpers.c  vk_helpers.h  vk_image_allocator.c  vk_image_readback_to_xf_pool.c  vk_image_readback_to_xf_pool.h  vk_print.c  vk_queue_builder.c  vk_queue_builder.h  vk_queue_family.c  vk_queue_family.h  vk_submit_helpers.c  vk_submit_helpers.h  vk_sync_objects.c  vk_time.c
src/xrt/compositor/: CMakeLists.txt
src/xrt/compositor/client/: CMakeLists.txt  comp_d3d11_client.cpp  comp_d3d12_client.cpp  comp_egl_client.c  comp_gl_client.c  comp_gl_client.h  comp_gl_memobj_swapchain.c  comp_gl_win32_client.c  comp_gl_xlib_client.c  comp_vk_client.c
src/xrt/compositor/main/: CMakeLists.txt  comp_compositor.c  comp_compositor.h  comp_main_interface.h  comp_mirror_to_debug_gui.c  comp_mirror_to_debug_gui.h  comp_renderer.c  comp_settings.c  comp_settings.h  comp_target.h  comp_target_swapchain.c  comp_target_swapchain.h  comp_window.h  comp_window_debug_image.c  comp_window_direct.c  comp_window_peek.c  comp_window_peek.h  comp_window_wayland.c
src/xrt/compositor/mock/: CMakeLists.txt
src/xrt/compositor/multi/: CMakeLists.txt  comp_multi_compositor.c  comp_multi_system.c
src/xrt/compositor/null/: CMakeLists.txt  null_compositor.c
src/xrt/compositor/render/: CMakeLists.txt  render_buffer.c  render_compute.c  render_distortion.c  render_gfx.c  render_interface.h  render_resources.c  render_util.c
src/xrt/compositor/shaders/: CMakeLists.txt  clear.comp  distortion.comp  layer.comp  layer_cylinder.frag  layer_cylinder.vert  layer_defines.inc.glsl  layer_equirect2.frag  layer_equirect2.vert  layer_projection.frag  layer_projection.vert  layer_quad.frag  layer_quad.vert  mesh.frag  mesh.vert  render_shaders.c  render_shaders_interface.h
src/xrt/compositor/util/: CMakeLists.txt  comp_base.h  comp_high_level_render.c  comp_high_level_render.h  comp_high_level_scratch.c  comp_high_level_scratch.h  comp_render.h  comp_render_cs.c  comp_render_gfx.c  comp_render_helpers.h  comp_scratch.c  comp_scratch.h  comp_swapchain.c  comp_vulkan.c  comp_vulkan.h
src/xrt/include/: CMakeLists.txt
src/xrt/include/xrt/: CMakeLists.txt  xrt_android.h  xrt_byte_order.h  xrt_compiler.h  xrt_compositor.h  xrt_config_arch.h  xrt_config_build.h.cmake_in  xrt_config_os.h  xrt_defines.h  xrt_deleters.hpp  xrt_device.h  xrt_future.h  xrt_future_value.h  xrt_handles.h  xrt_instance.h  xrt_limits.h  xrt_macro_lists.h  xrt_openxr_config.h.cmake_in  xrt_openxr_includes.h  xrt_plane_detector.h  xrt_prober.h  xrt_results.h  xrt_session.h  xrt_space.h  xrt_system.h  xrt_tracking.h  xrt_visibility_mask.h  xrt_vulkan_includes.h
src/xrt/ipc/: CMakeLists.txt
src/xrt/ipc/android/: build.gradle
src/xrt/ipc/client/: ipc_client.h  ipc_client_compositor.c  ipc_client_connection.c  ipc_client_device.c  ipc_client_future.c  ipc_client_hmd.c  ipc_client_instance.c  ipc_client_space_overseer.c  ipc_client_system.c  ipc_client_system_devices.c  ipc_client_tracking_origin.c  ipc_client_tracking_origin.h  ipc_client_xdev.c  ipc_client_xdev.h
src/xrt/ipc/server/: ipc_server.h  ipc_server_handler.c  ipc_server_interface.h  ipc_server_mainloop_android.c  ipc_server_mainloop_linux.c  ipc_server_mainloop_windows.cpp  ipc_server_objects.c  ipc_server_objects.h  ipc_server_per_client_thread.c  ipc_server_process.c
src/xrt/ipc/shared/: ipc_protocol.h  ipc_protocol_generated.h.template  ipc_utils.c  proto.py
src/xrt/ipc/shared/proto/: 10-instance.json  50-compositor.json  50-device.json  50-device.json.license  50-future.json  50-session.json  50-session.json.license  50-space.json  50-swapchain.json  50-system.json  50-tracking.json  50-tracking.json.license
src/xrt/state_trackers/gui/: CMakeLists.txt  gui_common.h  gui_ogl.c  gui_ogl_sink.c  gui_scene_calibrate.c  gui_scene_debug.c  gui_scene_main_menu.c  gui_scene_remote.c  gui_scene_resampler_test.c  gui_scene_tracking_overrides.c  gui_window_record.c
src/xrt/state_trackers/oxr/: CMakeLists.txt  oxr_api_body_tracking.c  oxr_api_body_tracking_bd.c  oxr_api_face_tracking_android.c  oxr_api_funcs.h  oxr_api_future.c  oxr_api_hand_tracking.c  oxr_api_instance.c  oxr_api_negotiate.c  oxr_api_session.c  oxr_api_swapchain.c  oxr_api_system.c  oxr_api_verify.h  oxr_body_tracking.c  oxr_body_tracking_bd.c  oxr_conversions.h  oxr_event.c  oxr_face_tracking2_fb.c  oxr_face_tracking_android.c  oxr_face_tracking_htc.c  oxr_frame_sync.h  oxr_future.c  oxr_hand_tracking.c  oxr_hand_tracking.h  oxr_instance.c  oxr_logger.c  oxr_logger.h  oxr_objects.h  oxr_pretty_print.c  oxr_roles.c  oxr_roles.h  oxr_session.c  oxr_session_frame_end.c  oxr_session_gfx_gles_android.c  oxr_space.c  oxr_system.c  oxr_two_call.h  oxr_verify.c  oxr_vulkan.c  oxr_xdev.c  (+1 more)
src/xrt/state_trackers/oxr/actions/: oxr_api_action.c  oxr_api_action.h  oxr_binding.c  oxr_binding.h  oxr_dpad_state.c  oxr_dpad_state.h  oxr_get_state.c  oxr_get_state.h  oxr_haptic.c  oxr_haptic.h  oxr_input.c  oxr_input.h  oxr_input_transform.c  oxr_input_transform.h  oxr_instance_action_context.c  oxr_instance_action_context.h  oxr_instance_path_cache.c  oxr_instance_path_cache.h  oxr_interaction_profile_array.c  oxr_interaction_profile_array.h  oxr_pair_hashset.c  oxr_pair_hashset.h  oxr_set_haptic.c  oxr_set_haptic.h  oxr_subaction.h
src/xrt/state_trackers/oxr/bindings/: CMakeLists.txt  oxr_bindings.py  oxr_generated_bindings.c.template  oxr_generated_bindings.h.template
(+448 files in other folders)
